--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+
+body{
+    background-color: #fafafa;
+}
 .row{
-    background-color: #f2f2f2;
+   
     margin-bottom: 0.6rem;
-    box-shadow: 1px 2px 4px gray;
+   
 }
 .row > div{
     margin-bottom: 0.1rem;
@@ -14,4 +18,19 @@ iframe {
 }
 #myPdf{
     height: 100%;
+}
+.card {
+    box-shadow: 0px 0px 15px -10px rgb(0 0 0 / 75%);
+}
+nav{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 5px;
 }
